<resources>
    <string name="app_name">SimplePOS</string>
    <string name="menu_text_orders">Orders</string>
    <string name="menu_text_products">Products</string>
    <string name="menu_text_clients">Clients</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_title">Client: %s</string>
    <string name="order_start_date">%s</string>
    <string name="client_hint">Client</string>
    <string name="search_action">Search</string>
    <string name="item_name">Item Name</string>
    <string name="total_format">Total:$%.2f</string>
    <string name="quantity_format">Quantiy:%f</string>
    <string name="item_code">Item Code</string>
    <string name="item_price">Item Price</string>
    <string name="item_tax">Item Tax %</string>
    <string name="add_product_error_msg">Check the info supplied, something seems to be missing or out of bounds</string>
    <string name="txt_invoice">Invoice</string>
    <string name="product">Product</string>
    <string name="order_id">ORDER_ID</string>
    <string name="txv_subtotal">Subtotal: $%6.2f</string>
    <string name="txv_total">Total: $%6.2f</string>
    <string name="save">Save</string>
    <string name="unit_p">Unit. P.</string>
    <string name="total">Total</string>
    <string name="money_format">$%6.2f</string>
    <string name="product_name">Product: %s</string>
    <string name="quantity_hint">Quantity</string>
</resources>
